--- a/micro-java/src/main/jkube/deployment.yml
+++ b/micro-java/src/main/jkube/deployment.yml
@@ -31,6 +31,9 @@ spec:
               fieldPath: metadata.namespace
         image: micro-java:1.0
         imagePullPolicy: IfNotPresent
+        envFrom:
+        - configMapRef:
+            name: configmap-hello
         name: quarkus
         ports:
         - containerPort: 8080
